src/objects/Review__c.object
<CustomObject>
<!--Test-->
    <fields>
        <fullName>Book__c</fullName>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Hidden_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Score__c</fullName>
        <label>Review Score</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Title__c</fullName>
        <label>Review Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <label>Review</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>User_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Review_Score_between_1_and_10</fullName>
        <active>true</active>
        <errorConditionFormula>Review_Score__c &lt;1 || Review_Score__c &gt; 10</errorConditionFormula>
        <errorDisplayField>Review_Score__c</errorDisplayField>
        <errorMessage>The Review Score must be an integer between 1 and 10</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reviewer_must_be_logged_in_User</fullName>
        <active>true</active>
        <errorConditionFormula>$User.Id &lt;&gt;  User_Reviewer__r.Id</errorConditionFormula>
        <errorDisplayField>User_Reviewer__c</errorDisplayField>
        <errorMessage>You cannot enter a review for another person</errorMessage>
    </validationRules>
</CustomObject>